--- a/angular-app/src/index.html
+++ b/angular-app/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>AngularApp</title>
+  <title>Code Shopping</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
