--- a/whatsapp/src/pages/login-options/login-options.html
+++ b/whatsapp/src/pages/login-options/login-options.html
@@ -5,18 +5,22 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="green-dark">
     <ion-title>CodeShopping - Escolha um método para entrar</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding text-center>
-  <ion-row>
-    <ion-col>
-      <button ion-button icon-left>
-        <ion-icon name="call"></ion-icon>
-        Com número de telefone
-      </button>
-    </ion-col>
-  </ion-row>
+    <button ion-button icon-left block color="green-dark">
+      <ion-icon name="call"></ion-icon>
+      Telefone
+    </button>
+    <button ion-button icon-left block color="primary">
+      <ion-icon name="logo-facebook"></ion-icon>
+      Facebook
+    </button>
+    <button ion-button icon-left block color="light">
+      <ion-icon name="logo-google"></ion-icon>
+      Google
+    </button>
 </ion-content>
