Mostrando lista de opções de login

--- a/whatsapp/src/pages/login-options/login-options.html
+++ b/whatsapp/src/pages/login-options/login-options.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content padding text-center>
-    <button ion-button icon-left block color="green-dark">
+    <button ion-button icon-left block color="green-dark" (click)="openLoginOptions()">
       <ion-icon name="call"></ion-icon>
       Telefone
     </button>
